--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +25,7 @@
        "'\\n1 - gradient descent\\n2 - learning rate, maxiteration, tolerance, X, y\\n3 - add column 0\\n4 - normalize function\\n5 - sigmoid function\\n6 - cost function\\n7 - cost derivative\\n8 - predict function \\n10 - evaluate function\\n    precision\\n    recall\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,18 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LogisticRegression:\n",
-    "    def __init__(self, learningRate, maxIteration, tolerance):\n",
+    "    def __init__(self, learningRate, maxIteration, tolerance, x_train, x_test, y_train, y_test):\n",
     "        self.learningRate = learningRate\n",
     "        self.maxIteration = maxIteration\n",
     "        self.tolerance = tolerance\n",
-    "        self.train_X, self.test_X, self.train_y, self.test_y = self.readDataset()\n",
+    "        self.X_train, self.X_test, self.y_train, self.y_test = x_train, x_test, y_train, y_test\n",
     "\n",
-    "    def readDataset(self):\n",
+    "    def train_test_split(self, X, y):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "        return X_train, X_test, y_train, y_test\n",
+    "\n",
+    "\n",
+    "    \"\"\"def readDataset(self):\n",
     "        train_df = pd.read_excel('Lab3_data.xls', sheet_name = '2004--2005 Data')\n",
     "        test_df = pd.read_excel('Lab3_data.xls', sheet_name = '2004--2007 Data')\n",
     "\n",
@@ -66,7 +72,7 @@
     "\n",
     "        train_X, train_y = train_df[:, 1:], train_df[:, 0]\n",
     "        test_X, test_y = test_df[:, 1:], test_df[:, 0]\n",
-    "        return train_X, test_X, train_y, test_y\n",
+    "        return train_X, test_X, train_y, test_y\"\"\"\n",
     "\n",
     "    def addX0(self, X):\n",
     "        return np.column_stack([np.ones([X.shape[0], 1]), X])\n",
@@ -110,14 +116,14 @@
     "\n",
     "    def fit(self):\n",
     "\n",
-    "        self.w = np.ones(self.train_X.shape[1], dtype = np.float64)\n",
+    "        self.w = np.ones(self.X_train.shape[1], dtype = np.float64)\n",
     "        print('Solving using gradient descent')\n",
-    "        self.gradientDescent(self.train_X, self.train_y)\n",
+    "        self.gradientDescent(self.X_train, self.y_train)\n",
     "\n",
     "        print(\"Evaluating the training results\")\n",
-    "        y_hat_train = self.predict(self.train_X)\n",
+    "        y_hat_train = self.predict(self.X_train)\n",
     "\n",
-    "        recall, precision, f_score = self.evaluateFunction(self.train_y, y_hat_train)\n",
+    "        recall, precision, f_score = self.evaluateFunction(self.y_train, y_hat_train)\n",
     "        print(\"The recall of the model was {}\".format(recall))\n",
     "        print(\"The precision of the model was {}\".format(precision))\n",
     "        print(\"The F1 score of the model was {}\".format(f_score))\n",
@@ -141,16 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression(tolerance=0.0, learningRate=0.1e-5, maxIteration= 10000)"
+    "df_train = pd.read_excel('Lab3_data.xls', sheet_name = '2004--2007 Data')\n",
+    "df_test = pd.read_excel('Lab3_data.xls', sheet_name = '2004--2005 Data')\n",
+    "\n",
+    "df_train, df_test = df_train.values, df_test.values\n",
+    "\n",
+    "X_train, y_train = df_train[:, 1:], df_train[:, 0]\n",
+    "X_test, y_test = df_test[:, 1:], df_test[:, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(tolerance=0.0, learningRate=0.1e-5, maxIteration= 10000, x_train=X_train, x_test=X_test, y_train=y_train, y_test=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -164,11 +185,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|\u001b[31m          \u001b[0m| 0/10000 [00:00<?, ?it/s]/var/folders/t4/dfv0dtcj5_3_grr325kbtfgr0000gn/T/ipykernel_83887/2214589592.py:27: RuntimeWarning: divide by zero encountered in log\n",
+      "  0%|\u001b[31m          \u001b[0m| 0/10000 [00:00<?, ?it/s]/var/folders/t4/dfv0dtcj5_3_grr325kbtfgr0000gn/T/ipykernel_84802/3745637888.py:32: RuntimeWarning: divide by zero encountered in log\n",
       "  loss = y * np.log(sig) + (1-y) * np.log(1-sig)\n",
-      "/var/folders/t4/dfv0dtcj5_3_grr325kbtfgr0000gn/T/ipykernel_83887/2214589592.py:27: RuntimeWarning: invalid value encountered in multiply\n",
+      "/var/folders/t4/dfv0dtcj5_3_grr325kbtfgr0000gn/T/ipykernel_84802/3745637888.py:32: RuntimeWarning: invalid value encountered in multiply\n",
       "  loss = y * np.log(sig) + (1-y) * np.log(1-sig)\n",
-      "100%|\u001b[31m██████████\u001b[0m| 10000/10000 [00:00<00:00, 36652.60it/s]"
+      "100%|\u001b[31m██████████\u001b[0m| 10000/10000 [00:00<00:00, 37176.62it/s]"
      ]
     },
     {
@@ -176,9 +197,9 @@
      "output_type": "stream",
      "text": [
       "Evaluating the training results\n",
-      "The recall of the model was 0.9722222222222222\n",
-      "The precision of the model was 0.9210526315789473\n",
-      "The F1 score of the model was 0.9459459459459458\n"
+      "The recall of the model was 0.9459459459459459\n",
+      "The precision of the model was 0.8974358974358975\n",
+      "The F1 score of the model was 0.9210526315789475\n"
      ]
     },
     {
