added explanation for misclassification

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -402,6 +402,14 @@
    "source": [
     "lr2.fit(exclude_index=[0,38])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Misclassified points on the wrong side of the decision boundary can significantly impact the performance of a logistic regression model, reducing metrics such as F1 score, precision, and recall. The model's accuracy can be affected if the decision boundary is too simple or if the data is not linearly separable. Misclassified points can also lead to biased estimates of the coefficients of the logistic regression model. Techniques such as regularization, adjusting the decision boundary, or applying other methods like resampling, feature engineering, or ensemble methods can improve the model's performance. Choosing an appropriate evaluation metric based on the problem and data characteristics can also help assess the model's performance."
+   ]
   }
  ],
  "metadata": {
